--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,13 +4,13 @@ site_name: REPO_NAME_OR_SITE_NAME
 nav:
   - Home: index.md
 
-site_author: Sunny Bhaveen Chandra
+site_author: Priyatosh Anand
 site_description: >-
   DESCRIPTION
 
 # Repository
-repo_name: c17hawke/REPO_NAME
-repo_url: https://github.com/c17hawke/REPO_NAME
+repo_name: priyatoshanand/REPO_NAME
+repo_url: https://github.com/priyatoshanand/REPO_NAME
 
 # Configuration
 theme:
@@ -39,13 +39,9 @@ theme:
 extra:
   social:
     - icon: fontawesome/brands/github-alt
-      link: https://github.com/c17hawke
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/c17hawke
+      link: https://github.com/priyatoshanand
     - icon: fontawesome/brands/linkedin
-      link: https://linkedin.com/in/c17hawke
-    - icon: fontawesome/brands/instagram
-      link: https://www.instagram.com/c17hawke/
+      link: https://www.linkedin.com/in/priyatosh-anand-2a969810b/
 
 extra_javascript:
   - javascripts/mathjax.js
@@ -70,4 +66,4 @@ plugins:
   - search
 
 copyright: |
-  &copy; 2022 <a href="https://github.com/c17hawke"  target="_blank" rel="noopener">Sunny Bhaveen Chandra</a>
+  &copy; 2022 <a href="https://github.com/priyatoshanand"  target="_blank" rel="noopener">Priyatosh Anand</a>
